# beatleader-qmod

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.ps1  buildQMOD.ps1  copy.ps1  extern.cmake  mod.json  mod.template.json  ndk-stack.ps1  ndkpath.txt  qpm-rust  qpm.json  qpm.shared.json  qpm_defines.cmake  restart-game.ps1  start-logging.ps1
.github/workflows/: main.yml
assets/: bl.bundle
include/: _config.hpp  assets.hpp  logging.hpp  main.hpp
include/API/: PlayerController.hpp  RequestManager.hpp  api.hpp
include/Assets/: AllFrameResult.hpp  BundleLoader.hpp  Gif.hpp  Sprites.hpp
include/Core/: Events.hpp  ReplayPlayer.hpp  ReplayRecorder.hpp  SpeedModifiers.hpp
include/Enhancers/: MapEnhancer.hpp  UserEnhancer.hpp
include/EventCallback/: invokable.hpp
include/Managers/: LeaderboardContextsManager.hpp  LeaderboardHeaderManager.hpp  MapTypesManager.hpp  PrestigeLevelIconsManager.hpp
include/Models/: Clan.hpp  ClanScore.hpp  Difficulty.hpp  ModifierRating.hpp  Player.hpp  Replay.hpp  Score.hpp  ScoreStats.hpp  ScoresContext.hpp  Song.hpp
include/UI/: CaptorClanUI.hpp  ClickableImage.hpp  EmojiSupport.hpp  ExperienceBar.hpp  HeaderButton.hpp  Leaderboard.hpp  LeaderboardInfoPanel.hpp  LeaderboardUI.hpp  LeaderboardViewController.hpp  LevelInfoUI.hpp  LinksContainer.hpp  LogoAnimation.hpp  MapDifficultyPanel.hpp  MapStatus.hpp  MapTypePanel.hpp  ModifiersUI.hpp  MultiplayerLeaderboard.hpp  PlayerAvatar.hpp  PreferencesViewController.hpp  PrestigePanel.hpp  QuestUI.hpp  QuestUIExtensions.hpp  ReeUIComponentV2.hpp  ResultsViewController.hpp  RoleColorScheme.hpp  ScoreDetailsUI.hpp  SkillTriangle.hpp  UIUtils.hpp  VotingButton.hpp  VotingUI.hpp
include/UI/Abstract/: AbstractReeModal.hpp  IReeModal.hpp  ReeModalSystem.hpp
include/UI/BSML_Addons/: BSMLAddonsLoader.hpp  BetterButtonHandler.hpp  BetterImageHandler.hpp
include/UI/Christmas/: BonusOrnamentStorePanel.hpp  ChristmasOrnamentLoader.hpp  ChristmasTree.hpp  ChristmasTreeAnimator.hpp  ChristmasTreeEditor.hpp  ChristmasTreeEditorPanel.hpp  ChristmasTreeLevel.hpp  ChristmasTreeManager.hpp  ChristmasTreeMover.hpp  ChristmasTreeMoverControlPanel.hpp  ChristmasTreeOrnament.hpp  ChristmasTreeSettingsPanel.hpp  OrnamentStoreCell.hpp  OrnamentStorePanel.hpp  SnowController.hpp  ValueAnimator.hpp  VectorAnimator.hpp
include/UI/Components/: CustomTextSegmentedControlData.hpp  ExternalComponents.hpp  HeaderButton.hpp  SimpleClickHandler.hpp  SmoothHoverController.hpp  StaticScreen.hpp
include/UI/MainMenu/: BeatLeaderNewsViewController.hpp
include/UI/Results/: TreeResultsModal.hpp
include/UI/ScoreDetails/: AdditionalScoreDetails.hpp  GeneralScoreDetails.hpp  MiniProfileButton.hpp  PlayerButtons.hpp  ScoreDetailsUI.hpp  ScoreStatsGraph.hpp  ScoreStatsGrid.hpp  ScoreStatsGridCell.hpp  (+1 more)
include/Utils/: ArrayUtils.hpp  BSMLUtility.hpp  CyclicBuffer.hpp  FileManager.hpp  FormatUtils.hpp  ModConfig.hpp  ModifiersManager.hpp  PlaylistSynchronizer.hpp  Range.hpp  RecorderUtils.hpp  ReeTransform.hpp  ReplayManager.hpp  ReplaySynchronizer.hpp  SongLoader.hpp  StringUtils.hpp  UnityExtensions.hpp  WebUtils.hpp  constants.hpp
scripts/: build.ps1  copy.ps1  createqmod.ps1  get-backup.ps1  ndk-stack.ps1  pull-tombstone.ps1  restore-backup.ps1  start-logging.ps1  validate-modjson.ps1
shared/Models/: ChristmasSettings.hpp  ChristmasTreeOrnamentSettings.hpp  ChristmasTreeSettings.hpp  Clan.hpp  ClanScore.hpp  Difficulty.hpp  MapData.hpp  MapDetail.hpp  MapsTypeDescription.hpp  NewsPost.hpp  Paged.hpp  PlatformEvent.hpp  Player.hpp  Replay.hpp  Score.hpp  ScoreStats.hpp  ScoreUpload.hpp  SerializablePose.hpp  SerializableQuaternion.hpp  SerializableVector2.hpp  SerializableVector3.hpp  Song.hpp  TreeStatus.hpp  TrendingMapData.hpp  TriangleRating.hpp
src/: ViewController.cpp  main.cpp
src/API/: PlayerController.cpp  RequestManager.cpp  api.cpp
src/Assets/: BundleLoader.cpp  Sprites.cpp
src/Core/: ReplayRecorder.cpp  SpeedModifiers.cpp
src/Enhancers/: MapEnhancer.cpp  UserEnhancer.cpp
src/Managers/: LeaderboardContextsManager.cpp  LeaderboardHeaderManager.cpp  MapTypesManager.cpp  PrestigeLevelIconsManager.cpp
src/Models/: ChristmasTreeOrnamentSettings.cpp  ChristmasTreeSettings.cpp  Clan.cpp  ClanScore.cpp  Difficulty.cpp  MapData.cpp  MapDetail.cpp  MapsTypeDescription.cpp  NewsPost.cpp  PlatformEvent.cpp  Player.cpp  Replay.cpp  Score.cpp  ScoreStats.cpp  ScoreUpload.cpp  ScoresContext.cpp  SerializablePose.cpp  SerializableQuaternion.cpp  SerializableVector2.cpp  SerializableVector3.cpp  Song.cpp  TreeStatus.cpp  TrendingMapData.cpp
src/UI/: CaptorClanUI.cpp  ClickableImage.cpp  EmojiSupport.cpp  ExperienceBar.cpp  HeaderButton.cpp  Leaderboard.cpp  LeaderboardInfoPanel.cpp  LeaderboardUI.cpp  LevelInfoUI.cpp  LinksContainer.cpp  LogoAnimation.cpp  MapDifficultyPanel.cpp  MapStatus.cpp  MapTypePanel.cpp  ModifiersUI.cpp  MultiplayerLeaderboard.cpp  PlayerAvatar.cpp  PreferencesViewController.cpp  PrestigePanel.cpp  QuestUI.cpp  ReeUIComponentV2.cpp  ResultsViewController.cpp  ScoreDetailsUI.cpp  SkillTriangle.cpp  UIUtils.cpp  VotingButton.cpp  VotingUI.cpp
src/Utils/: BSMLUtility.cpp  EmojiSupport.cpp  FileManager.cpp  ModifiersManager.cpp  PlaylistSynchronizer.cpp  Range.cpp  RecorderUtils.cpp  ReplayManager.cpp  ReplaySynchronizer.cpp  UnityExtensions.cpp  WebUtils.cpp
(+91 files in other folders)
